# seek_backend

./: .gitignore  pyproject.toml
config/: settings.py  urls.py  wsgi.py
core/: test.py
core/templates/core/: home.html
