[tool.poetry]
name = "seek-backend"
version = "0.1.0"
description = "seek backend"
authors = ["mendrit25 <ma47323@ubt-uni.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
